one-backend/server/deployment/envoy.yaml
static_resources:
  listeners:
  - address:
      socket_address:
        address: 127.0.0.1
        port_value: 9000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          codec_type: AUTO
          stat_prefix: envoy_minio
          route_config:
            name: minio_route
            virtual_hosts:
            - name: minio
              domains:
              - "*"
              routes:
              - match:
                  prefix: "/"
                route:
                  cluster: minio
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
  - name: minio
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: minio
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: minio
                port_value: 9000

admin:
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 10001
